syntax="proto3";


option go_package = "github.com/predixus/orca/protobufs/go";

import "google/protobuf/struct.proto";
import "vendor/validate.proto";

// OrcaCore is the central orchestration service that:
// - Manages the lifecycle of processing windows
// - Coordinates algorithm execution across distributed processors
// - Tracks DAG dependencies and execution state
// - Routes results between dependent algorithms
// - Manages data getter caching and lifecycle
service OrcaCore {
  // Register a processor node and its supported algorithms
  rpc RegisterProcessor(ProcessorRegistration) returns (Status);

  // Submit a window for processing
  rpc EmitWindow(Window) returns (WindowEmitStatus);
}

// OrcaProcessor defines the interface that each processing node must implement.
// Processors are language-agnostic services that:
// - Execute individual algorithms
// - Handle their own internal state
// - Report results back to the orchestrator
// Orca will schedule processors asynchronously as per the DAG
service OrcaProcessor {
  // Execute part of a DAG with streaming results
  // Server streams back execution results as they become available
  rpc ExecuteDagPart(ExecutionRequest) returns (stream ExecutionResult);

  // Check health/status of processor. i.e. a heartbeat
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Execute a data getter and store results in cache
  rpc ExecuteDataGetter(DataGetterExecutionTask) returns (DataGetterResult);
}

// Cache configuration for data getters
message DataGetterCacheConfig {
  // TTL for cache entries in seconds (0 = no expiration - default)
  int32 ttl_seconds = 1;

  // Maximum size of cached data in bytes (0 = no limit - default)
  int64 max_size_bytes = 2;
}

// DataGetter defines a function that accepts a Window and returns some binary data
// that is consumed by algorithms.
message DataGetter {
  // The name of the data getter - must be unique within a processor
  string name = 1 [(buf.validate.field).required = true];

  // The window type that this data getter is triggered by
  WindowType window_type = 2 [(buf.validate.field).required = true];

  // Cache configuration for this data getter
  DataGetterCacheConfig cache_config = 3;
}


// Cache connection information
message CacheConnectionInfo {
  // Cache type (i.e. one of: "redis")
  string cache_type = 1 [(buf.validate.field).required = true];

  // Connection string (e.g., "redis://localhost:6379")
  string connection_string = 2 [(buf.validate.field).required = true];
}

// Task sent to processor to execute a data getter and cache the results
message DataGetterExecutionTask {
  // Unique execution ID
  string execution_id = 1 [(buf.validate.field).required = true];

  // Window context for the data getter
  Window window = 2 [(buf.validate.field).required = true];

  // Data getter to execute
  DataGetter data_getter = 3 [(buf.validate.field).required = true];

  // Cache key to store results under
  string cache_key = 4 [(buf.validate.field).required = true];

  // Cache connection information
  CacheConnectionInfo cache_info = 5 [(buf.validate.field).required = true];
}

// Result of data getter execution
message DataGetterResult {
  // Execution ID
  string execution_id = 1 [(buf.validate.field).required = true];

  // Status of execution
  enum Status {
    SUCCESS = 0;
    FAILED = 1;
    CACHE_STORE_FAILED = 2;
  }
  Status status = 2 [(buf.validate.field).required = true];

  // Cache key where data was stored if successful
  string cache_key = 3;

  // Size of cached data in bytes
  int64 data_size_bytes = 4;

  // Error message if failed
  string error_message = 5;

  // Timestamp when completed
  int64 timestamp = 6 [(buf.validate.field).required = true];
}


// Reference to cached data for algorithms
message CachedDataReference {
  // Name of the data getter that produced this data
  string data_getter_name = 1 [(buf.validate.field).required = true];

  // Cache key where the data is stored
  string cache_key = 2 [(buf.validate.field).required = true];

  // Cache connection info
  CacheConnectionInfo cache_info = 3 [(buf.validate.field).required = true];

  // Timestamp when data was cached
  int64 cached_timestamp = 4;

  // Size of cached data
  int64 data_size_bytes = 5;
}


// Window represents a time-bounded processing context that triggers algorithm execution.
// Windows are the primary input that start DAG processing flows.
message Window {
  // Time that the window starts - nanoseconds since epoch
  // Required: Must be > 0 and < to
  uint64 time_from = 1 [(buf.validate.field) = {
    required: true,
    uint64: {
      gt: 0
    }
  }];

  // Time that the window ends - nanoseconds since epoch
  // Required: Must be > from
  uint64 time_to = 2 [(buf.validate.field).required = true];
  
  // The canonical name of the window that uniquely identifies it
  // This allows tracking of window state and results across the system
  // Required: Must be unique within the system, and refer directly to
  // window type
  string window_type_name = 3 [(buf.validate.field).required = true];

  // The version of the window type, as defined by WindoType
  string window_type_version = 4 [(buf.validate.field).required = true];

  // A unique identifier that defines where the window came from
  string origin = 5 [(buf.validate.field).required = true];

  option (buf.validate.message).cel = {
    id: "window.time_to",
    message: "`time_to` must be greater than or equal to `time_from`",
    expression: "this.time_to >= this.time_from",
  };

  // Additional metadata specific to this instance of `WindowType`.
  // E.g. Asset information
  // Must be provided as an arbitrary struct
  google.protobuf.Struct metadata = 4;
}

// WindowType defines a category of window that can trigger algorithms.
// Algorithms subscribe to window types to indicate when they should be executed.
message WindowType {
  // Name of the window type - must be globally unique
  // Examples: "daily", "hourly", "market_close", "event_triggered"
  string name = 1 [(buf.validate.field).required = true];

  // Version of the algorithm. Follows basic semver and allows window
  // types to be changed over time, with traceability
  string version = 2 [(buf.validate.field).required=true];
}

message WindowEmitStatus {

  // A status enum that captures scenarios regarding a window being emmited
  enum StatusEnum {
    // When no algorithms could be found that are triggered by this window
    NO_TRIGGERED_ALGORITHMS = 0;

    // When processing has successfully been triggered
    PROCESSING_TRIGGERED = 1;

    // When triggering has failed
    TRIGGERING_FAILED = 2;
  }
  StatusEnum status = 1 [(buf.validate.field).required = true];
}

// AlgorithmDependency defines a requirement that one algorithm has on another's results.
// These dependencies form the edges in the processing DAG.
message AlgorithmDependency {
  // Name of the required algorithm
  // Must reference an existing algorithm name in the system
  string name = 1 [(buf.validate.field).required = true];

  // Version of the required algorithm
  // Must follow semantic versioning (e.g., "1.0.0")
  string version = 2 [(buf.validate.field).required = true];

  // Name of the processor that the algorithm is associated with
  string processor_name = 3 [(buf.validate.field).required = true];

  // Runtime of the processor that the algorithm is associated with
  string processor_runtime = 4 [(buf.validate.field).required = true];
}

// Algorithm defines a processing unit that can be executed by processors.
// Algorithms form the nodes in the processing DAG and are triggered by specific window types.
message Algorithm {
  // Name of the algorithm - must be globally unique
  // This identifies the algorithm across the system
  string name = 1 [(buf.validate.field).required = true];

  // Version of the algorithm - must follow semantic versioning
  // Allows for algorithm evolution while maintaining compatibility
  string version = 2 [(buf.validate.field).required = true];

  // Type of window that triggers this algorithm
  // References a WindowType that will cause this algorithm to execute
  WindowType window_type = 3 [(buf.validate.field).required = true];

  // Other algorithms that this algorithm depends on
  // The algorithm won't execute until all dependencies have completed
  // Dependencies must not form cycles - this is statically checked on processor registration
  repeated AlgorithmDependency dependencies = 4;

  // Required datagetters for this algorithm to run
  repeated string required_data_getters = 5;
}

// ResultStatus indicates the outcome of algorithm execution
enum ResultStatus {
  // Algorithm failed but the error was handled gracefully
  // The system may retry or skip depending on configuration
  RESULT_STATUS_HANDLED_FAILED = 0;

  // Algorithm failed with an unexpected error
  // Requires investigation and may halt dependent processing
  RESULT_STATUS_UNHANDLED_FAILED = 1;

  // Algorithm completed successfully
  // Results are valid and can be used by dependent algorithms
  RESULT_STATUS_SUCEEDED = 2;
}

// Container for array of float values
message FloatArray {
  repeated float values = 1;
}

// Result of an algorithm execution
message Result {
  // Status of the result execution
  ResultStatus status = 1 [(buf.validate.field).required = true];

  // The actual result data - can be either an array of floats or a structured object
  oneof result_data {
    // for single number results
    float single_value = 2;

    // For numeric array results
    FloatArray float_values = 3;
    
    // For structured data results (JSON-like)
    // Must follow a map<string, value> schema where value corresponds to https://protobuf.dev/reference/protobuf/google.protobuf/#value
    google.protobuf.Struct struct_value = 4;
  }

  // Timestamp when the result was produced
  int64 timestamp = 5 [(buf.validate.field).required = true];
}

// ProcessorRegistration is sent by processors when they start up to announce their capabilities
// to the orchestrator. This establishes a long-lived connection for receiving tasks.
message ProcessorRegistration {
  // Unique name of the runtime
  string name = 1 [(buf.validate.field).required = true];

  // Language/runtime of the processor
  // Examples: "python3.9", "go1.19", "Rust4.1"
  string runtime = 2 [(buf.validate.field).required = true];

  // The connection string of the processor 
  // e.g. grpc://localhost:5433
  string connection_str = 3 [(buf.validate.field).required = true];

  // Algorithms this processor can execute
  // The processor must implement all listed algorithms
  repeated Algorithm supported_algorithms = 4 [(buf.validate.field).required = true];

  // Data getters that this processor owns
  repeated DataGetter data_getters = 5;
}

// ExecutionRequest provides a complete view of a processing DAG's execution
// status for a specific window. Used for monitoring and debugging.
message ExecutionRequest {
  // The exec_id
  string exec_id = 1 [(buf.validate.field).required = true];

  // The window that triggered the algorithm 
  Window window = 2 [(buf.validate.field).required = true];
  
  // Results from dependant algorithms
  repeated AlgorithmResult algorithm_results = 3;

  // The algorithms to execute
  repeated Algorithm algorithms = 4;

  // References to cached data from data getters
  repeated CachedDataReference cached_data = 5;
}

message ExecutionResult {
  // Exec ID
  string exec_id = 1 [(buf.validate.field).required = true];
  
  // The algorithn result
  AlgorithmResult algorithm_result = 3 [(buf.validate.field).required = true];
}


// AlgorithmWindowResult Packaged algorithm and result to a window
message AlgorithmResult {
  Algorithm algorithm = 1 [(buf.validate.field).required=true];
  Result result = 2 [(buf.validate.field).required=true];
}

message Status {
  bool received = 1;
  string message = 2;
}

// HealthCheckRequest is sent to processors to verify they are functioning
message HealthCheckRequest {
  // Timestamp of the request in unix epoch milliseconds
  // Used to measure response latency
  int64 timestamp = 1 [(buf.validate.field).required = true];
}

// HealthCheckResponse indicates the health status of a processor
message HealthCheckResponse {
  // Overall health status of the processor
  enum Status {
    // Unknown status - should never be used
    STATUS_UNKNOWN = 0;
    // Processor is healthy and ready to accept tasks
    STATUS_SERVING = 1;
    // Processor is starting up or shutting down
    STATUS_TRANSITIONING = 2;
    // Processor is not healthy and cannot accept tasks
    STATUS_NOT_SERVING = 3;
  }
  
  // Current health status
  Status status = 1 [(buf.validate.field).required = true];

  // Optional message providing more detail about the health status
  string message = 2;

  // System metrics about the processor
  ProcessorMetrics metrics = 3;
}

// ProcessorMetrics provides runtime information about a processor
message ProcessorMetrics {
  // Number of algorithms currently being executed
  int32 active_tasks = 1;

  // Memory usage in bytes
  int64 memory_bytes = 2;

  // CPU usage percentage (0-100)
  float cpu_percent = 3;

  // Time since processor started in seconds
  int64 uptime_seconds = 4;
}
